25-April-2012 Michael Babker
~ Set default tweet text to article title if plugin param not set

24-February-2012 Michael Babker
+ Add it-IT translation

28-January-2012 Michael Babker
+ Add tr-TR translation

--------------------------------------------------
Yet Another Social Plugin 1.1 Beta 2 - Released 16-January-2012
--------------------------------------------------
13-January-2012 Michael Babker
! Minimum supported version is Joomla! 2.5

14-November-2011 Michael Babker
- Remove Google Buzz button due to API shutdown

18-October-2011 Michael Babker
~ Add a min-width to button elements

29-September-2011 Michael Babker
~ Add check for Buzz being enabled

--------------------------------------------------
Yet Another Social Plugin 1.1 Beta - Released 17-September-2011
--------------------------------------------------
17-September-2011 Michael Babker
~ Update Twitter languages
~ Add logic for Twitter Language 3 letter codes

11-September-2011 Michael Babker
+ Add Google Buzz button
~ Change inline style to classes

9-September-2011 Michael Babker
+ Add sr-RS translation
~ Move language processing to separate functions

8-September-2011 Michael Babker
+ Add work from Olaf
+ Add dynamic processing for languages

28-August-2011 Michael Babker
+ Add nl-NL translation

--------------------------------------------------
Yet Another Social Plugin 1.0.1 - Released 12-August-2011
--------------------------------------------------
12-August-2011 Michael Babker
+ Add ability to display buttons at the bottom of the article
+ Add ability to add custom default.css

30-July-2011 Michael Babker
+ Add pt-BR and sv-SE translations

--------------------------------------------------
Yet Another Social Plugin 1.0.0 - Released 28-July-2011
--------------------------------------------------
28-July-2011 Michael Babker
+ Add options for Facebook Button
+ Add options for Google Button
+ Add options for Twitter Button

27-July-2011 Michael Babker
+ Create the plugin