@@ -12,7 +12,7 @@
 	<target
 		name="dev_head"
 		description="Builds test packages based on the development head"
-		depends="phpcs,rebuild-packages,build-temp"
+		depends="rebuild-packages,build-temp"
 	>
 		<delete quiet="yes" includeemptydirs="true">
 			<fileset dir=".">
