@@ -79,4 +79,12 @@ PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_USER_DESCRIPTION="A user to indica
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_USER_LABEL="Twitter Username"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_RELATED_DESCRIPTION="A related account, this is on every page (appends "_QQ_"related @user"_QQ_" to the share tweet)"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_TWITTER_RELATED_LABEL="Related Twitter Account"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_VIEW_ARCHIVE_DESCRIPTION="Choose whether to display the buttons in the archive view"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_VIEW_ARCHIVE_LABEL="Display in Archive view"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_VIEW_ARTICLE_DESCRIPTION="Choose whether to display the buttons in the article view"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_VIEW_ARTICLE_LABEL="Display in Article view"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_VIEW_CATEGORY_DESCRIPTION="Choose whether to display the buttons in a category view"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_VIEW_CATEGORY_LABEL="Display in Category view"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_VIEW_FEATURED_DESCRIPTION="Choose whether to display the buttons in the featured view"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_VIEW_FEATURED_LABEL="Display in Featured view"
 PLG_CONTENT_YETANOTHERSOCIAL_XML_DESCRIPTION="Yet Another Social Plugin is a plugin for Joomla! to display an assortment of social networking buttons."
