@@ -1,3 +1,6 @@
+4-October-2012 Michael Babker
++ [#4] Request - enable/disable category/frontpage
+
 25-April-2012 Michael Babker
 ~ Set default tweet text to article title if plugin param not set
 
